--- a/week1/index.html
+++ b/week1/index.html
@@ -17,11 +17,23 @@
         const triggerButton = document.getElementById('fetch-button')
         const mainContent = document.getElementById('main-content')
 
-        triggerButton.addEventListener('click', () => {
-            console.log('Button clicked')
+        triggerButton.addEventListener('click', ()=>{
             fetch('www.thecocktaildb.com/api/json/v1/1/random.php')
-                .then((response) => {
-                    console.log(response)
+                .then((response => response.json()))
+                .then((data) => {
+                    let drinkData = data.drinks[0]
+                    console.log(drinkData)
+                    let drinkName = drinkData.strDrink
+                    let drinkImage = drinkData.strDrinkThumb
+                    let drinkInstructions = drinkData.strInstructions
+
+                    let drinkHTML = `
+                        <h2>${drinkName}</h2>
+                        <img src="${drinkImage}" alt="${drinkName}" />
+                        <p>${drinkInstructions}</p>
+                    `
+                    mainContent.innerHTML = drinkHTML
+                    
                 })
         })
     </script>
