--- a/week1/index.html
+++ b/week1/index.html
@@ -18,7 +18,7 @@
         const mainContent = document.getElementById('main-content')
 
         triggerButton.addEventListener('click', ()=>{
-            fetch('www.thecocktaildb.com/api/json/v1/1/random.php')
+            fetch('https://www.thecocktaildb.com/api/json/v1/1/random.php')
                 .then((response => response.json()))
                 .then((data) => {
                     let drinkData = data.drinks[0]
