--- a/PersonalWeb/index.html
+++ b/PersonalWeb/index.html
@@ -41,7 +41,7 @@
 
         body {
             font-family: 'Terminal Grotesque', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-            background: #0039A6;
+            background: transparent;
             color: #fff;
             overflow-x: hidden;
         }
@@ -337,9 +337,6 @@
 <body>
     <!-- 纹理背景 -->
     <div class="texture-bg"></div>
-    
-    <!-- 水波纹画布 -->
-    <canvas id="ripple-canvas"></canvas>
 
     <div class="container">
         <!-- 顶部导航 -->
