--- a/hzhang27.html
+++ b/hzhang27.html
@@ -30,10 +30,8 @@
             position: fixed;
             top: 0;
             left: 0;
-            width: 110%;  /* 放大一点，防止边缘露白 */
-            height: 110%;
-            left: -5%;    /* 居中偏移 */
-            top: -5%;
+            width: 100%;  
+            height: 100%;
             background: url('pics/MacBook Pro 16_ - 2.png') no-repeat center center/cover;
             z-index: -1;
         }
@@ -391,6 +389,25 @@
                 </div>
             </div>
         </div>
+
+        <div class="project">
+            <div class="project-img">
+                <img src="pics/resonance-cover.png" alt="Resonance">
+            </div>
+            <div class="project-info">
+                <div class="project-label">Team Work</div>
+                <h2>Resonance</h2>
+                <div class="date">November 2024</div>
+                <p>Resonance is an digital brooch design that visualizes 8Values, MBTI, and music aesthetic preferences. It was completed in just 2 days, so it's a concept design that demonstrates my ability to create data visualizations within a short timeframe.</p>
+                <p>It explores how the boundaries between individuals and groups are constructed and redefined, ultimately fostering understanding, communication, and integration across different circles.</p>
+                <div class="tags">
+                    <span class="tag">#Digital Brooch Design</span>
+                    <span class="tag">#Product Sketch</span>
+                    <span class="tag">#Visual System Building</span>
+                </div>
+            </div>
+        </div>
+
     </section>
 
     <footer>
