--- a/hzhang27.html
+++ b/hzhang27.html
@@ -437,6 +437,14 @@
                 // 在点击位置产生波纹
                 $(this).ripples('drop', e.pageX, e.pageY, 20, 0.04)
             })
+
+            // 鼠标移动时偶尔产生波纹
+                $(document).on('mousemove', function(e) {
+                    // 2% 的概率产生波纹（避免太密集）
+                    if (Math.random() > 0.98) {
+                        $('.bg').ripples('drop', e.pageX, e.pageY, 10, 0.02)
+                    }
+            })
             
         })
 
