--- a/PersonalWeb/index.html
+++ b/PersonalWeb/index.html
@@ -435,13 +435,13 @@
             // 鼠标时偶尔产生波纹
                 $(document).on('mousemove', function(e) {
                     if (Math.random() > 0.80 && Math.random() <= 0.90) {
-                        $('.bg').ripples('drop', e.pageX, e.pageY, 18, 0.04)
+                        $('.bg').ripples('drop', e.clientX, e.clientY, 18, 0.04)
                     }
                     else if (Math.random() > 0.90 && Math.random() <= 0.95) {
-                        $('.bg').ripples('drop', e.pageX, e.pageY, 12, 0.02)
+                        $('.bg').ripples('drop', e.clientX, e.clientY, 12, 0.02)
                     }
                     else {
-                        $('.bg').ripples('drop', e.pageX, e.pageY, 8, 0.005)
+                        $('.bg').ripples('drop', e.clientX, e.clientY, 8, 0.005)
                     }
             })
         })
